# Owlies

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  Makefile  Owlies.pro  README  README.md  main.cpp  settings.ini
GUI/: mainwindow.cpp  mainwindow.h  mainwindow.ui
controllers/: main_window.cc  main_window.hpp  toolbox.cc  toolbox.hpp
dialogs/: dialog_settings_creator.cc  dialog_settings_creator.hpp
dialogs/controllers/: draw_settings_ctrl.cc  draw_settings_ctrl.hpp  faces_settings_ctrl.cc  faces_settings_ctrl.hpp  recognize_dialog_ctrl.cc  recognize_dialog_ctrl.hpp  thin_settings_ctrl.cc  thin_settings_ctrl.hpp
dialogs/controllers/filters/: bilateral_filter_settings_ctrl.cc  bilateral_filter_settings_ctrl.hpp  blur_filter_settings_ctrl.cc  blur_filter_settings_ctrl.hpp  box_filter_settings_ctrl.cc  box_filter_settings_ctrl.hpp  closing_filter_settings_ctrl.cc  closing_filter_settings_ctrl.hpp  dilate_filter_settings_ctrl.cc  dilate_filter_settings_ctrl.hpp  erode_filter_settings_ctrl.cc  erode_filter_settings_ctrl.hpp  gaussian_filter_settings_ctrl.cc  gaussian_filter_settings_ctrl.hpp  laplacian_filter_settings_ctrl.cc  laplacian_filter_settings_ctrl.hpp  median_filter_settings_ctrl.cc  median_filter_settings_ctrl.hpp  opening_filter_settings_ctrl.cc  opening_filter_settings_ctrl.hpp  scharr_filter_settings_ctrl.cc  scharr_filter_settings_ctrl.hpp  sobel_filter_settings_ctrl.cc  sobel_filter_settings_ctrl.hpp
dialogs/gui/: draw_settings.ui  faces_settings.ui  recognize.ui  thin_settings.ui  ui_draw_settings.h  ui_faces_settings.h  ui_recognize.h  ui_thin_settings.h
dialogs/gui/filters/: bilateral_filter_settings.ui  blur_filter_settings.ui  box_filter_settings.ui  closing_filter_settings.ui  dilate_filter_settings.ui  erode_filter_settings.ui  gaussian_filter_settings.ui  laplacian_filter_settings.ui  median_filter_settings.ui  opening_filter_settings.ui  scharr_filter_settings.ui  sobel_filter_settings.ui  ui_bilateral_filter_settings.h  ui_blur_filter_settings.h  ui_box_filter_settings.h  ui_closing_filter_settings.h  ui_dilate_filter_settings.h  ui_erode_filter_settings.h  ui_gaussian_filter_settings.h  ui_laplacian_filter_settings.h  ui_median_filter_settings.h  ui_opening_filter_settings.h  ui_scharr_filter_settings.h  ui_sobel_filter_settings.h
dialogs/gui/subclasses/: color_label.cc  color_label.hpp
gui/: main_window.ui  toolbox.ui  ui_main_window.h  ui_toolbox.h
gui/filters/: ui_bilateral_filter_settings.h  ui_blur_filter_settings.h
gui/subclasses/: OwlyRendered.cpp  OwlyRendered.h  image_label.cc  image_label.hpp
model/: image.cc  image.hpp
models/ssd_mobilenet_v1_coco_2017_11_17/: recognize_mobilenet.py
resources/: resources.qrc  resources.rcc
resources/data/: lbpcascade_profileface.xml
scripts/: recognize_mobilenet.py
